# dftpy

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml
doc/: Makefile  conf.py  gen_doc.py  index.rst
doc/source/: Pseudopotentials.rst  conf.py  contact.rst  faq.rst  index.rst  install.rst  ofdft.rst  releases.rst
doc/static/: custom.css
doc/templates/: breadcrumbs.html
examples/DATA/: Au_pgbrv02.psp8  GaAs.cif  GaAs.vasp  GaAs.xyz  GaAs_random.vasp  GaAs_random.xsf  Mg8.vasp  Mg_OEPP_PZ.UPF  al.lda.upf  al_random.in  al_random.xsf  ase_opt.traj  cd.vasp  hd.vasp  initial_atoms_md.traj  md.traj  rho_target.xsf  ti.xsf
examples/Pseudopotentials/: Au_pgbrv02.psp8  lpps.ipynb  tmp.out  tmp.xml
examples/ehrenfest/: ehrenfest1.ipynb  t19.py
examples/md/: test_ase_npt.py  test_ase_npt_normal.py  test_ase_nvt.py  test_ase_nvt_nh.py  traj2xyz.py
examples/notebooks/: density_optimization.ipynb  td-ofdft-tutorial.ipynb
examples/ofdft/: config.ini  isolate.ini  optim.ini  optim.py  optim_pbe.ini  simple.py  test.py
examples/relax/: test_ase_opt.py
examples/spin-unrestricted/: Al-nspin_dftpy_dev.ipynb
examples/td-ofdft/: casida.ini  config.ini  density  density.xsf  optimize.ini  optimize_vasp.py  propagate-restart.ini  propagate.ini  propagate.py  td_out_E  td_out_j  td_out_mu
examples/test/: __init__.py  common.py  test_ase_md.py  test_ase_opt.py  test_ase_pmg_io.py  test_base.py  test_density.py  test_density_opt.py  test_ewald.py  test_field.py  test_functional.py  test_functional_LibXC.py  test_grid.py  test_lpps.py  (+9 more)
scripts/: convertPP.py  convert_den.py  convert_td.py  dftpy  gen_doc  invert  opt_layer_pseudo.py  quadrupole.py  rtc_runner  test_layer_pseudo.py
tools/: gitversion.py
(+195 files in other folders)
