[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dftpy"
version = "2.1.3dev0"
license = { file = "LICENSE.txt" }
description = "Python packages for Density Functional Theory"
maintainers = [
	{name = "Pavanello Research Group",		email = "m.pavanello@rutgers.edu"},
	{name = "Xuecheng Shao",				email = "shaoxc@jlu.edu.cn"},
]
requires-python = ">=3.6"
dependencies = [
	'numpy>=1.11.0',
	'scipy>=0.18.0',
	'ase>=3.22.0',
	'xmltodict>=0.12.0'
]
readme = "README.md"
classifiers = [
	'Development Status :: 3 - Alpha',
	'Intended Audience :: Science/Research',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.6',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.scripts]
dftpy = 'dftpy.cui.main:main'

[project.optional-dependencies]
docs = [
	"sphinx",
	"sphinx-rtd-theme",
	"sphinx-panels",
	"sphinx-copybutton",
	"sphinx-inline-tabs",
	"nbsphinx",
	"pandoc"
]
test = [
	"pytest",
	"pytest-cov",
	"pytest-mpi",
]
mpi = [
	"mpi4py",
	"mpi4py-fft",
]

[project.urls]
homepage = "https://gitlab.com/pavanello-research-group/dftpy"
documentation = "http://dftpy.rutgers.edu"
source = "https://gitlab.com/pavanello-research-group/dftpy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
